# LIGHTYEARS

./: .gitignore  CMakeLists.txt  CMakePresets.json
Build_Windows_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Build_Windows_debug/GameEngine/: cmake_install.cmake
GameEngine/: CMakeLists.txt
GameEngine/src/: EntryPoint.cpp
GameEngine/src/GamePlay/: GameStage.cpp  GameStage.hpp  WaitStage.cpp  WaitStage.h  WaitStage.hpp
GameEngine/src/VFX/: Particle.cpp  Particle.hpp
GameEngine/src/Widgets/: HUD.cpp  HUD.hpp  TextWidget.cpp  TextWidget.hpp  Widget.cpp  Widget.hpp
GameEngine/src/framework/: Actor.cpp  Actor.hpp  AssetsManager.cpp  AssetsManager.h  AssetsManager.hpp  BackGroundLayer.hpp  Delegate.cpp  Delegate.hpp  MathUtility.cpp  Object.cpp  Object.h  Object.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  TimerManager.cpp  TimerManager.hpp  application.cpp  application.h  application.hpp  core.h  world.cpp  world.h  world.hpp
GameEngine/src/gameplay/: WaitStage.hpp
GameEngine/src/vfx/: Particle.hpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/SRC/GamePlay/: GameStage.cpp
LightYearsEngine/SRC/VFX/: Particle.h
LightYearsEngine/SRC/framework/: Actor.h  AssetsManager.cpp  Delegate.cpp  MessUtility.h  Object.cpp  application.cpp  world.cpp
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/GamePlay/: GameStage.h
LightYearsEngine/include/framework/: Actor.h  AssetsManager.h  MessUtility.h  PhysicsSystem.h  TimerManager.h  application.h  core.h  world.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/GamePlay/: WaitStage.cpp
LightYearsEngine/src/VFX/: Particle.cpp
LightYearsEngine/src/engine/: Vector2D.hpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  BackDropActor.cpp  BackDropActor.hpp  BackGroundLayer.cpp  Core.hpp  Delegate.h  Delegate.hpp  MathUtility.cpp  MathUtility.hpp  MessUtility.cpp  Object.hpp  PhysicsSystem.cpp  TimerManager.cpp  TimerManager.hpp  World.cpp  World.hpp
LightYearsEngine/src/gameplay/: GameStage.cpp  GameStage.hpp  WaitStage.cpp
LightYearsEngine/src/vfx/: Particle.cpp
LightYearsEngine/src/widgets/: Button.hpp  HUD.cpp  HUD.hpp  ImageWidget.hpp  ValueGauge.cpp  ValueGauge.hpp  Widget.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/SRC/: config.h
LightYearsGame/SRC/Enemy/: EnemySpaceShip.cpp  Hexagon.cpp  Hexagon.h  HexagonStage.cpp  TwinBlade.cpp  TwinBladeStage.cpp  UFO.cpp  UFO.h  UFOStage.cpp  UFOStage.h  Vanguard.cpp  VanguardStage.cpp
LightYearsGame/SRC/GameFramework/: gameApplication.cpp
LightYearsGame/SRC/GamePlay/: HealthComponent.cpp
LightYearsGame/SRC/Levels/: GameLevel1.cpp
LightYearsGame/SRC/Player/: Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  PlayerSpaceShip.cpp
LightYearsGame/SRC/SpaceShip/: SpaceShip.cpp
LightYearsGame/SRC/Weapon/: Bullet.cpp  BulletShooter.cpp  FrontalWiper.cpp  ThreeWayShooter.cpp  Weapon.cpp
LightYearsGame/include/: config.h  config.hpp
LightYearsGame/include/Enemy/: EnemySpaceShip.h  HexagonStage.h  TwinBlade.h  TwinBladeStage.h  UFO.h  UFOStage.h
LightYearsGame/include/GamePlay/: HealthComponent.h
LightYearsGame/include/Levels/: GameLevel1.h
LightYearsGame/include/Player/: PlayerManager.h  PlayerSpaceShip.h
LightYearsGame/include/SpaceShip/: SpaceShip.h
LightYearsGame/include/VFX/: Explosion.h
LightYearsGame/include/Weapon/: BulletShooter.h  FrontalWiper.h  ThreeWayShooter.h  Weapon.h
LightYearsGame/src/: config.h
LightYearsGame/src/Enemy/: EnemySpaceShip.cpp  EnemySpaceShip.hpp  Hexagon.cpp  Hexagon.hpp  HexagonStage.cpp  HexagonStage.h  HexagonStage.hpp  TwinBlade.cpp  TwinBlade.h  TwinBlade.hpp  TwinBladeStage.cpp  TwinBladeStage.h  TwinBladeStage.hpp  UFO.cpp  UFO.hpp  UFOStage.cpp  UFOStage.hpp  Vanguard.cpp  Vanguard.h  Vanguard.hpp  VanguardStage.cpp  VanguardStage.h  VanguardStage.hpp
LightYearsGame/src/GameFramework/: gameApplication.cpp  gameApplication.h  gameApplication.hpp
LightYearsGame/src/GamePlay/: HealthComponent.cpp  HealthComponent.hpp
LightYearsGame/src/Levels/: GameLevel1.cpp  GameLevel1.hpp
LightYearsGame/src/Player/: Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp  PlayerSpaceShip.cpp  PlayerSpaceShip.hpp  Reward.cpp  Reward.h  Reward.hpp
LightYearsGame/src/SpaceShip/: SpaceShip.cpp  SpaceShip.hpp
LightYearsGame/src/VFX/: Explosion.cpp  Explosion.hpp
LightYearsGame/src/Weapon/: Bullet.cpp  Bullet.h  Bullet.hpp  BulletShooter.cpp  BulletShooter.h  BulletShooter.hpp  FrontalWiper.cpp  FrontalWiper.h  FrontalWiper.hpp  ThreeWayShooter.cpp  ThreeWayShooter.h  ThreeWayShooter.hpp  Weapon.cpp  Weapon.h  Weapon.hpp
LightYearsGame/src/Widgets/: GamePlayHUD.cpp  GamePlayHUD.hpp
LightYearsGame/src/enemy/: Boss.cpp  Boss.hpp  BossStage.cpp  BossStage.hpp  EnemySpaceship.cpp  EnemySpaceship.hpp  Octagon.cpp  Octagon.hpp  TwinBlade.cpp  TwinBlade.hpp  UFO.cpp  UFO.hpp  Vanguard.cpp  Vanguard.hpp
LightYearsGame/src/gameFramework/: GameApplication.cpp  GameApplication.hpp
LightYearsGame/src/gameplay/: HealthComponent.cpp  HealthComponent.hpp
LightYearsGame/src/level/: GameLevelOne.cpp  GameLevelOne.hpp  MainMenuLevel.cpp  MainMenuLevel.hpp
LightYearsGame/src/player/: Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp  PlayerSpaceship.cpp  PlayerSpaceship.hpp  Reward.cpp  Reward.hpp
LightYearsGame/src/spaceship/: Spaceship.cpp  Spaceship.hpp
LightYearsGame/src/stage/: ChaosStage.cpp  ChaosStage.hpp  OctagonStage.cpp  OctagonStage.hpp  TwinBladeStage.cpp  TwinBladeStage.hpp  UfoStage.cpp  UfoStage.hpp  VanguardStage.cpp  VanguardStage.hpp
LightYearsGame/src/vfx/: Explosion.cpp  Explosion.hpp
LightYearsGame/src/weapon/: Bullet.cpp  Bullet.hpp  BulletShooter.cpp  BulletShooter.hpp  FrontalWiper.cpp  FrontalWiper.hpp  MultiShooter.cpp  MultiShooter.hpp  Shooter.cpp  Shooter.hpp  ThreeWayShooter.cpp  ThreeWayShooter.hpp
LightYearsGame/src/widgets/: GameplayHUD.cpp  GameplayHUD.hpp  MainMenuHUD.cpp  MainMenuHUD.hpp
(+39 files in other folders)
